--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Form CSS */
 *,
 *::after,
 *::before {
@@ -113,7 +114,7 @@ h1 {
   text-align: center;
 }
 
-.container {
+.container1 {
   margin: 4vmax max(calc((100vw - 70rem) / 2), 1.5rem) 6em;
   display: grid;
   gap: clamp(2rem, 3.5vmax, 8rem);
@@ -241,3 +242,5 @@ hr {
   border: 0.1em solid hsl(var(--accent) / 0.3);
   box-shadow: 0 -1em 3em hsl(var(--muted)), 0 1em 3em hsl(var(--accent) / 0.2);
 }
+
+/* Notes CSS */
