--- a/src/components/notes/notes.css
+++ b/src/components/notes/notes.css
@@ -39,6 +39,7 @@ code {
 	display: grid;
 	grid-gap: 1rem;
 	grid-template-columns: repeat(
+		auto-fit,
 		auto-fill,
 		minmax(250px, 1fr)
 	);
@@ -46,6 +47,11 @@ code {
 
 .note.new {
 	background-color: rgb(30, 29, 29);
+	display:flex;
+	
+	
+	
+
 }
 
 textarea {
@@ -71,7 +77,7 @@ textarea:focus {
 }
 
 .note {
-	background-color: #fef68a;
+	background-color: #4A40BF;
 	border-radius: 10px;
 	padding: 1rem;
 	min-height: 170px;
