--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -3,13 +3,45 @@
     border-color: #000000;  
     border-style: solid;
     border-radius: 10px;
-    padding: 20px;
-    margin: 20px;
-    background-color: #ffffff;
+    padding: 5px;
+    margin: 5px;
+    background-color: rgb(30, 29, 29);;
     width: 50%;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 5%;
     margin-bottom: 5%;
-    box-shadow: 0 0 10px #000000;
+    box-shadow: 0 0 10px #C6513A;
+}
+
+.form-group {
+   display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+
+}
+
+.message{
+ background-color: #55504f;   
+}
+
+.form-btn {
+    background-color: #4A40BF;
+    border: none;
+    border-radius: 50px;
+    color: #ffffff;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 10px;
+    padding: 10px;
+    width: 100%;
+}
+
+.form-label{
+    color: #ffffff;
+    font-size: 16px;
+    margin-top: 5px;
+    padding: 5px;
+    width: 100%;
 }
